--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-vue-fc",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "index.js",
   "repository": "git@github.com:l-zoy/babel-plugin-vue-fc.git",
   "author": "zoy-l <409626581@qq.com>",
@@ -8,6 +8,9 @@
   "files": [
     "index.js"
   ],
+  "scripts": {
+    "test": "node ./test.js"
+  },
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "prettier": "^2.5.1"
